--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=0000
 # Hibernate properties
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
-spring.security.user.name=user
-spring.security.user.password=user
+#spring.security.user.name=user
+#spring.security.user.password=user
 spring.ldap.embedded.validation.enabled=false
