--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.generate-ddl=true
 #spring.security.user.name=user
 #spring.security.user.password=user
 spring.ldap.embedded.validation.enabled=false
+#spring.main.web-application-type=none
